--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "test-ts",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "tsx ./src/ioc.ts",
+    "dev": "tsc",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "@types/node": "^22.8.7",
     "reflect-metadata": "^0.2.2",
-    "tsx": "^4.19.2",
+    "ts-node": "^10.9.2",
     "typescript": "~5.6.3",
     "vite": "^5.4.10"
   }
