--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
-    "experimentalDecorators": true,
-
-    // Treat files as modules even if it doesn't use import/export
-    "moduleDetection": "force",
-
-    // Ignore module structure
-    "module": "Preserve",
-
-    // Allow JSON modules to be imported
-    "resolveJsonModule": true,
-
-    // Allow JS files to be imported from TS and vice versa
-    "allowJs": true,
-
-    // Use correct ESM import behavior
+    "target": "ES2018",
+    "module": "commonjs",
+    "lib": [
+      "esnext","dom"
+    ],
+    "rootDir": "src",
+    "outDir": "dist",
     "esModuleInterop": true,
-
-    // Disallow features that require cross-file awareness
-    "isolatedModules": true,
-
-    /* Bundler mode */
-    "moduleResolution": "Bundler",
-    "allowImportingTsExtensions": true,
-    "noEmit": true,
-
-    /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "skipLibCheck": true,
+    "declaration": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "exclude": ["node_modules"]
 }
